[gd_scene load_steps=5 format=2]

[ext_resource path="res://CamDev/Scripts/Utility/TeaClump.gd" type="Script" id=1]
[ext_resource path="res://CamDev/Sprites/Ingredients/TeaClumps/clump_tallow.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 24.0208

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[node name="TeaClump" type="KinematicBody2D"]
position = Vector2( 75, 83 )
script = ExtResource( 1 )
_clumpSpr = ExtResource( 2 )
_ingName = "fartChamber"
_gravityRate = 50

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
